--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -5,6 +5,7 @@ html {
 
 body {
   height: 100%;
+  margin: 0;
 }
 
 *, *:before, *:after {
@@ -20,9 +21,28 @@ body {
 }
 
 [am-Logo] {
-  width: 40vw;
-  height: 40vw;
+
+  width: 60vw;
+  height: 60vw;
+
+  @media (min-width: 700px) {
+    width: 40vw;
+    height: 40vw;
+  }
+
   position: relative;
+  opacity: 0;
+  transform: scale(0.5);
+  transition: 5s;
+
+  .is-loaded & {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  .no-transition & {
+    transition: none;
+  }
 
   img, canvas {
     position: absolute;
@@ -30,5 +50,9 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
+  }
+
+  canvas {
+    clip-path: polygon(55% 16%, 67% 29%, 77% 32%, 68% 57%, 93% 51%, 82% 66%, 56% 70%, 48% 67%, 19% 68%, 7% 59%, 26% 48%, 32% 26%, 40% 19%);
   }
 }
