Analytics tag added

--- a/index.ejs
+++ b/index.ejs
@@ -18,4 +18,13 @@
     </a>
   </div>
 </body>
+
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-60252396-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-60252396-2');
+</script>
 </html>
