--- a/index.ejs
+++ b/index.ejs
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="icon" type="image/png" href="/assets/fav/fav-32.png" sizes="32x32" />
+  	<link rel="icon" type="image/png" href="/assets/fav/fav-16.png" sizes="16x16" />
+  	<meta property="og:image" content="http://nudibranch.uk/assets/images/share.jpg" />
     <style>
       [am-Logo] {
         opacity: 0;
